# pay-to-sudoku

./: .gitignore  Cargo.toml  Makefile  README.md  get-libsnark
snark/: lib.cpp  snark.tcc
src/: bitcoin.rs  client.rs  ffi.rs  gadget.hpp  gadget.tcc  lib.cpp  main.rs  server.rs  snark.hpp  snark.tcc  sudoku.rs  test.cpp  test.h  util.rs
